<resources>
    <string name="app_name">Z Speed+</string>
    <string name="action_settings">Settings</string>
    <string name="font_families_roboto">sans-serif</string>
    <string name="font_families_roboto_thin">sans-serif-thin</string>
    <string name="font_families_roboto_light">sans-serif-light</string>
    <string name="font_families_roboto_condensed">sans-serif-condensed</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_select">Select</string>
    <string name="common_delete">Delete</string>
    <string name="common_others">Others</string>
    <string name="common_stop">Stop</string>
    <string name="common_uninstall">Uninstall</string>
    <string name="common_back_up">Back Up</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_install">Install</string>
    <string name="common_installed">Installed</string>
    <string name="common_vertion">Version</string>
    <string name="common_update">Update</string>
    <string name="common_insufficient_storate">Insufficient Storage Space</string>
    <string name="common_no_sdcard">SDCard Not Found</string>
    <string name="available">Available</string>
    <string name="main_ram_title">RAM</string>
    <string name="main_storage_title">STORAGE</string>
    <string name="main_button_boost">Memory Boost</string>
    <string name="main_button_storage">Junk Files</string>
    <string name="main_button_manage">App Manager</string>
    <string name="main_ram_total">%s Total</string>
    <string name="main_storage_total">%s Total</string>
    <string name="tip_press_again_to_exit">Press again to exit</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_update">Update</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="boost_main_act_title">Memory Boost</string>
    <string name="boost_main_act_tab_running">Running</string>
    <string name="boost_main_act_tab_autostart">Autostart</string>
    <string name="boost_running_apps_custom">%1$d App(s) Selected</string>
    <string name="boosting_memory_act_title">Memory Boost</string>
    <string name="boosting_tips">Boosting</string>
    <string name="boosting_power_tips">Power Boosting</string>
    <string name="boosted_to_optimus_tips">Boosted to optimus status!</string>
    <string name="boosted_active_power_mode_tips">Opps! %1$d Apps auto started again.\nActive PowerMode to handle it!</string>
    <string name="enable_super_boost_enable">Enable</string>
    <string name="enable_super_boost_title">Enable Super Mode</string>
    <string name="enable_super_boost_main_text">In order to more effectively accelerate, we recommend that you turn on Accessibility features.</string>
    <string name="enable_super_boost_content_text1" formatted="false">To help you stop unnecessary apps completely.</string>
    <string name="enable_super_boost_content_text2" formatted="false">Decrease battery consumption.</string>
    <string name="enable_super_boost_content_text3" formatted="false">More than 85% of users have enable this feature.</string>
    <string name="boost_turn_on_boost_accessibility_service_tip">Tap Z Speed+ in Service</string>
    <string name="boost_accessibility_service_description">Turn on the above button to activate Z Speed+ Power Mode for maximum acceleration!\n\nZ Speed+ use accessibility features to help stopping not-using apps. Please don\'t worry if you see the privacy risk reminder, that\'s just a regular informative warning for any accessibility service. 
    \n\nWe promise NOT to collect ANY information.</string>
    <string name="autostart_app_desr">Options</string>
    <string name="autostart_optimization_desr">Can be optimized</string>
    <string name="autostart_type_optimization">To Be Optimized</string>
    <string name="autostart_type_allowed">Allowed</string>
    <string name="autostart_type_blocked">Blocked</string>
    <string name="autostart_type_system">Pre-installed Apps</string>
    <string name="autostart_type_system_description">Blocking pre-installed apps autostarts may cause system in-stablity. Proceed with caution</string>
    <string name="autostart_preinstll_system">Pre-installed Apps</string>
    <string name="autostart_on_boot_up">Boot up</string>
    <string name="autostart_on_background">Background</string>
    <string name="autostart_on_boot_up_and_background">Boot up/Background</string>
    <string name="autostart_detail_title">Autostarts in %1$d situation(s):</string>
    <string name="ignore_list_act_title">Ignore List</string>
    <string name="add_to_ignore_list_act_title">Add to Ignore List</string>
    <string name="dialog_memory_footprint">Memory Used</string>
    <string name="dialog_add_to_ignorelist">Add to Ignore List</string>
    <string name="dialog_remove_from_ignorelist">Remove from Ignore List</string>
    <string name="tip_ignore_list_appunchecked">These apps will be unchecked by default after scanning.</string>
    <string name="tip_ignore_list_appadd">Tap \'+\' to add ignore apps.</string>
    <string name="app_manager">APP Manager</string>
    <string name="app_manager_my_backups">My Backups</string>
    <string name="app_manager_others">Others</string>
    <string name="app_manager_back_up_success_tips">apps has been backed up to:</string>
    <string name="app_manager_back_up_success_tips_for_one">app has been backed up to:</string>
    <string name="app_manager_back_up_fail_tips">apps failed</string>
    <string name="app_manager_back_up_fail_tips_for_one">app failed</string>
    <string name="app_manager_pre_installed_apps">Pre-Installed Apps</string>
    <string name="app_manager_backing_up">Backing Up</string>
    <string name="app_manager_running">Running</string>
    <string name="app_manager_stop">Stop</string>
    <string name="app_manager_apps_running">Apps running</string>
    <string name="app_manager_apps_desc">Disabling reduces consumption. It is completely safe</string>
    <string name="app_manager_path">Path</string>
    <string name="app_manager_no_backup_found">No Backup Found</string>
    <string name="app_manager_tap_to_disable">Tap Disable/Turn off to disable</string>
    <string name="app_manager_tap_to_enable">Tap Enable/Turn on to enable</string>
    <string name="app_manager_select_app_first">Please select the apps first</string>
    <string name="app_manager_shit">OK</string>
    <string name="app_manager_freed">Freed</string>
    <string name="app_manager_use_rare_month">Rarely used in month</string>
    <string name="app_manager_use_rare_days">Rarely used in %s days</string>
    <string name="app_manager_use_commonly">Commonly used</string>
    <string name="app_manager_android_system">Android System</string>
    <string name="app_manager_use_rare">Rarely used</string>
    <string name="app_manager_tab_userapps">User Apps</string>
    <string name="app_manager_tab_system">Pre-installed</string>
    <string name="app_manager_tab_text_date">Date</string>
    <string name="app_manager_tab_text_frequance">Frequency</string>
    <string name="app_manager_tab_text_size">Size</string>
    <string name="app_manager_tab_text_battery">Battery</string>
    <string name="app_manager_tab_text_name">Name</string>
    <string name="app_manager_dialog_cancel">Cancel</string>
    <string name="app_manager_dialog_backup">Back Up</string>
    <string name="app_manager_dialog_uninstall">Uninstall</string>
    <string name="app_manager_preinstall_noyice"><Data><![CDATA[&nbsp&nbsp&nbsp&nbsp<font color="#76B54B"> %s Apps running </font> Disabling reduces consumption. It is completely safe]]></Data></string>
    <string name="app_manager_no_uerapp">No apps</string>
    <string name="clean_main_act_title">Junk Files</string>
    <string name="clean_main_suggest">Suggested</string>
    <string name="clean_main_selected">Selected</string>
    <string name="clean_dialog_title">Cautions</string>
    <string name="clean_dialog_message1">The file you selected contains below contents:</string>
    <string name="gallery_thumbnails">Gallery Thumbnails</string>
    <string name="clean_gallery_thumbnails_dialog_tips">After deleting it would be slower during loading in gallery.</string>
    <string name="clean_group_residue">Residual Files</string>
    <string name="clean_group_cache">Cache Files</string>
    <string name="clean_group_temp">System Temp Files</string>
    <string name="clean_group_apk">Obsolete apks</string>
    <string name="clean_group_big_file">Big Files</string>
    <string name="clean_done_tips">Cleaned</string>
    <string name="clean_dialog_app_cache_yes_btn">Manual Cleanup</string>
    <string name="clean_dialog_folder_yes_btn">View</string>
    <string name="clean_dialog_file_yes_btn">Open</string>
    <string name="clean_dialog_media_yes_btn">Play</string>
    <string name="clean_dialog_message_size">Size</string>
    <string name="clean_dialog_message_contain">Contain</string>
    <string name="clean_dialog_message_path">Path</string>
    <string name="clean_dialog_message_file">files</string>
    <string name="clean_dialog_message_folder">folders</string>
    <string name="clean_done_none_tips">Excellent</string>
    <string name="uninstall_dialog">Clean</string>
    <string name="uninstall_dialog_message_1">%1$s left &lt;font color="#85c443">%2$s&lt;/font> residual files.</string>
    <string name="uninstall_dialog_message_2">Contains: </string>
    <string name="uninstall_clean_tips">&#160;residual files were cleaned!</string>
    <string name="commontitle_setting_setting">Settings</string>
    <string name="title_feedback_setting">Feedback</string>
    <string name="container_hint_setting_feedback">Please write your comments here, provide as much detail as you can. We are always listening and improving.</string>
    <string name="mial_hint_setting_feedback">Email</string>
    <string name="notice_setting_feedback">Phone model and version will be collected for diagnosing your issue.We will never collect personal information without your permission</string>
    <string name="no_contain_setting_feedback">Hi,say something?</string>
    <string name="sendok_setting_feedback">Thanks for your feedback!</string>
    <string name="checknet_setting_feedback">Please check your network connection.</string>
    <string name="facebook_about_setting"><u>Like us on facebook</u></string>
    <string name="googleplus_about_setting"><u>Join Google+ communication</u></string>
    <string name="googleplay_about_setting"><u>Rate us at GooglePlay</u></string>
    <string name="title_about_setting">About</string>
    <string name="share_setting_about">Z Speed+ makes my phone faster and cleaner. Have a try! Get it: http://goo.gl/q10oHl</string>
    <string name="law_one_setting_about">©2014-2015 ZERO Team. All Rights Reserved.</string>
    <string name="law_jump_setting_about"><u>Privacy Policy</u></string>
    <string name="share_title_setting_about">share Z Speed+</string>
    <string name="http_facebook">https://www.facebook.com/pages/Z-Boost/318325038361225</string>
    <string name="http_gplus">https://plus.google.com/b/112348125604156072635/communities/104671237601119272862</string>
    <string name="title_float_widget">Floating Widget</string>
    <string name="title_notice">Notifications</string>
    <string name="enable_widget_setting_setting">Enable</string>
    <string name="hide_widget_setting_setting">Hide to the time of status bar</string>
    <string name="show_widget_setting_setting">Show on desktop only</string>
    <string name="memory_setting_setting">Memory boost needed</string>
    <string name="storge_setting_setting">Storage space running out</string>
    <string name="junk_setting_setting">Residula junk files</string>
    <string name="autostart_setting_setting">New autostart request</string>
</resources>