<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@android:color/white"
    android:paddingLeft="@dimen/common_margin"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/common_margin" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dialog_common_icon_widthorheght"
        android:layout_height="@dimen/dialog_common_icon_widthorheght"
        android:layout_marginRight="@dimen/dialog_common_margin" />

    <TextView
        android:id="@+id/title"
        style="@style/dialog_common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/icon"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/icon"
        android:singleLine="true"
        android:text="@string/app_manager_backing_up" />

    <RelativeLayout
        android:id="@+id/finish_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_centerVertical="true"
        android:visibility="visible" >

        <TextView
            android:id="@+id/vertion_tip"
            style="@style/dialog_common_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/common_vertion" />

        <TextView
            android:id="@+id/success_count"
            style="@style/dialog_common_versionname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vertion_tip"
            android:ellipsize="marquee"
            android:includeFontPadding="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxWidth="130dp"
            android:singleLine="true"
            android:text="1.0" />

        <TextView
            android:id="@+id/success_words"
            style="@style/dialog_common_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/success_count"
            android:layout_alignTop="@id/success_count"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/common_margin"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/success_count"
            android:layout_toRightOf="@id/success_count" />

        <TextView
            android:id="@+id/cancel"
            style="@style/dialog_common_button_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/install"
            android:layout_toLeftOf="@+id/install"
            android:background="@drawable/common_dialog_btn_selector"
            android:padding="@dimen/dialog_common_padding"
            android:text="@string/common_cancel" />

        <TextView
            android:id="@+id/install"
            style="@style/dialog_common_button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/common_dialog_btn_selector"
            android:padding="@dimen/dialog_common_padding"
            android:text="@string/common_installed" />
    </RelativeLayout>

</RelativeLayout>