<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/menu_setting_title" >
    </FrameLayout>

    <include
        android:id="@+id/title_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        layout="@layout/common_title_layout" />

    <EditText
        android:id="@+id/container_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/title_setting_feedback"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:fontFamily="@string/font_families_roboto"
        android:gravity="top"
        android:hint="@string/container_hint_setting_feedback"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="15dp"
        android:textColor="#787878"
        android:textColorHint="#B5B5B5"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/mail_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_setting_feedback"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:fontFamily="@string/font_families_roboto"
        android:hint="E-Mail"
        android:paddingBottom="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="#787878"
        android:textColorHint="#B5B5B5"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/notice_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_setting_feedback"
        android:fontFamily="@string/font_families_roboto"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:text="@string/notice_setting_feedback"
        android:textSize="12dp" />
    
    <com.gto.zero.zboost.view.ProgressWheel
        android:id="@+id/feedback_progresswheel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        wheel:matProg_barColor="@color/common_green_normal"
        wheel:matProg_barWidth="3dp" />
</RelativeLayout>